# watchtree

./: .gitignore  LICENSE  TODO  watchtree.cabal
src/: Logger.hs  Main.hs
