name         : watchtree
version      : 0.1.0.1
synopsis     : Do something whenever files in a directory tree are updated
-- description  : 
license      : AllRightsReserved
license-file : LICENSE
author       : Manuel Gómez <targen@gmail.com>
maintainer   : targen@gmail.com
copyright    : © PRX Consulting, 2013
category     : System
build-type   : Simple
cabal-version: >=1.10

executable watchtree
  hs-source-dirs  : src
  main-is         : Main.hs
  other-modules   : Logger
  ghc-options     : -Wall -threaded
  default-language: Haskell2010
  build-depends   : aeson                == 0.6.1.0
                  , base                 >= 4.5      && < 4.7
                  , base-unicode-symbols == 0.2.2.4
                  , base16-bytestring    == 0.1.1.5
                  , bytestring           >= 0.9.2.1  && < 0.11
                  , cereal               == 0.3.5.2
                  , cmdargs              >= 0.10     && < 0.11
                  , conduit              >= 1.0.5    && < 1.1
                  , crypto-conduit       == 0.5.2
                  , cryptohash-cryptoapi == 0.1.0
                  , either               >= 3.4      && < 3.5
                  , fsnotify             == 0.0.11
                  , lifted-base          >= 0.2.0.4  && < 0.3
                  , monad-logger         == 0.3.1.1
                  , mtl                  == 2.1.2
                  , persistent           >= 1.2.0.1  && < 1.3
                  , persistent-sqlite    >= 1.2      && < 1.3
                  , persistent-template  >= 1.2.0    && < 1.3
                  , process              >= 1.1.0.1  && < 1.2
                  , regex-tdfa           == 1.1.8
                  , resourcet            >= 0.4.7.1  && < 0.5
                  , shakespeare-text     >= 1.0.0.5  && < 1.1
                  , system-filepath      == 0.4.7
                  , template-haskell     >= 2.7.0.0  && < 2.9
                  , text                 >= 0.11.2.3 && < 0.12
                  , time                 >= 1.4      && < 1.5
                  , transformers         == 0.3.0.0
                  , yaml                 >= 0.8.2.4  && < 0.9
